--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.jsp-api-2.1-6.0.2.jar=../../Downloads/jsp-api-2.1-6.0.2.jar
+file.reference.jsp-api-2.1-6.0.2.jar=../../netbeans-12.6/jsp-api-2.1-6.0.2.jar
 file.reference.mysql-connector-java-8.0.27.jar=../../netbeans-12.6/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar
 includes=**
 j2ee.compile.on.save=true
