--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 deploy.ant.properties.file=/home/dikshant/.netbeans/12.6/tomcat90.properties
-j2ee.server.home=/home/dikshant/Downloads/apache-tomcat-9.0.56
-j2ee.server.instance=tomcat90:home=/home/dikshant/Downloads/apache-tomcat-9.0.56
+j2ee.server.home=/home/dikshant/netbeans-12.6/apache-tomcat-9.0.56
+j2ee.server.instance=tomcat90:home=/home/dikshant/netbeans-12.6/apache-tomcat-9.0.56
 user.properties.file=/home/dikshant/.netbeans/12.6/build.properties
