--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.jsp-api-2.1-6.0.2.jar=../../netbeans-12.6/jsp-api-2.1-6.0.2.jar
 file.reference.mysql-connector-java-8.0.27.jar=../../netbeans-12.6/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar
 includes=**
 j2ee.compile.on.save=true
@@ -39,8 +38,7 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.27.jar}:\
-    ${file.reference.jsp-api-2.1-6.0.2.jar}
+    ${file.reference.mysql-connector-java-8.0.27.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
